--- a/app/src/main/res/layout/activity_loaded_wallet.xml
+++ b/app/src/main/res/layout/activity_loaded_wallet.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.tangem.presentation.activity.LoadedWalletActivity">
 
-    <include
-        layout="@layout/content_loaded_wallet"/>
+    <fragment
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/loaded_wallet_fragment"
+        android:name="com.tangem.presentation.fragment.LoadedWallet"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:layout="@layout/fr_loaded_wallet"/>
 
 </android.support.design.widget.CoordinatorLayout>
