--- a/app/src/main/res/layout/activity_purge.xml
+++ b/app/src/main/res/layout/activity_purge.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,7 +18,7 @@
             android:fontFamily="@font/raleway_r"
             android:text="@string/now_touch_the_banknote_with_id"
             android:textAlignment="center"
-            android:textSize="@dimen/text_size_medium"/>
+            android:textSize="@dimen/text_size_medium" />
 
         <TextView
             android:id="@+id/tvCardID"
@@ -31,7 +30,7 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_large"
-            tools:text="CB02 0000 0002 5000"/>
+            tools:text="CB02 0000 0002 5000" />
 
         <TextView
             android:layout_width="match_parent"
@@ -39,7 +38,7 @@
             android:fontFamily="@font/raleway_r"
             android:text="@string/to_erase_the_wallet"
             android:textAlignment="center"
-            android:textSize="@dimen/text_size_medium"/>
+            android:textSize="@dimen/text_size_medium" />
 
         <TextView
             android:layout_width="match_parent"
@@ -49,7 +48,7 @@
             android:text="@string/by_tapping_the_card"
             android:textAlignment="center"
             android:textColor="@android:color/holo_red_light"
-            android:textSize="@dimen/text_size_medium"/>
+            android:textSize="@dimen/text_size_medium" />
 
     </LinearLayout>
 
@@ -61,6 +60,6 @@
         android:layout_alignParentBottom="true"
         android:alpha="0.5"
         android:elevation="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </RelativeLayout>
