--- a/app/src/main/res/layout/activity_confirm_payment.xml
+++ b/app/src/main/res/layout/activity_confirm_payment.xml
@@ -26,10 +26,10 @@
         android:id="@+id/llPayment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:background="@color/btn_light"
         android:orientation="vertical"
         android:paddingBottom="8dp"
+        android:paddingLeft="5dp"
         android:paddingTop="8dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
