--- a/app/src/main/res/layout/activity_create_new_wallet.xml
+++ b/app/src/main/res/layout/activity_create_new_wallet.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,10 +17,10 @@
             android:fontFamily="@font/maax"
             android:text="@string/now_touch_the_banknote_with_id"
             android:textAlignment="center"
-            android:textSize="@dimen/text_size_medium"/>
+            android:textSize="@dimen/text_size_medium" />
 
         <TextView
-            android:id="@+id/tvCardID"
+            android:id="@+id/tvCardId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -30,7 +29,7 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_large"
-            tools:text="3748378347"/>
+            tools:text="CB02 0000 0002 5000" />
 
         <TextView
             android:layout_width="match_parent"
@@ -38,10 +37,10 @@
             android:fontFamily="@font/maax"
             android:text="@string/to_create_the_wallet"
             android:textAlignment="center"
-            android:textSize="@dimen/text_size_medium"/>
+            android:textSize="@dimen/text_size_medium" />
 
     </LinearLayout>
 
-    <include layout="@layout/layout_progress_horizontal"/>
+    <include layout="@layout/layout_progress_horizontal" />
 
 </RelativeLayout>
