--- a/app/src/main/res/layout/activity_request_pin.xml
+++ b/app/src/main/res/layout/activity_request_pin.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.tangem.presentation.activity.RequestPINActivity"
-    tools:ignore="contentDescription">
+    tools:context="com.tangem.presentation.activity.RequestPINActivity">
 
     <TextView
         android:id="@+id/tvPin"
@@ -18,7 +17,7 @@
         android:textAlignment="center"
         android:textSize="36sp"
         tools:ignore="TextViewEdits"
-        tools:text="12345" />
+        tools:text="1234" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,78 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <GridLayout
-            android:id="@+id/gridLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:columnCount="3"
-            android:rowCount="4">
-
-            <Button
-                android:id="@+id/btn1"
-                style="@style/ButtonPin"
-                android:text="@string/_1" />
-
-            <Button
-                android:id="@+id/btn2"
-                style="@style/ButtonPin"
-                android:text="@string/_2" />
-
-            <Button
-                android:id="@+id/btn3"
-                style="@style/ButtonPin"
-                android:text="@string/_3" />
-
-            <Button
-                android:id="@+id/btn4"
-                style="@style/ButtonPin"
-                android:text="@string/_4" />
-
-            <Button
-                android:id="@+id/btn5"
-                style="@style/ButtonPin"
-                android:text="@string/_5" />
-
-            <Button
-                android:id="@+id/btn6"
-                style="@style/ButtonPin"
-                android:text="@string/_6" />
-
-            <Button
-                android:id="@+id/btn7"
-                style="@style/ButtonPin"
-                android:text="@string/_7" />
-
-            <Button
-                android:id="@+id/btn8"
-                style="@style/ButtonPin"
-                android:text="@string/_8" />
-
-            <Button
-                android:id="@+id/btn9"
-                style="@style/ButtonPin"
-                android:text="@string/_9" />
-
-            <Space />
-
-            <Button
-                android:id="@+id/btn0"
-                style="@style/ButtonPin"
-                android:text="@string/_0" />
-
-            <Button
-                android:id="@+id/btnBackspace"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="@dimen/pin_button_size"
-                android:layout_height="@dimen/pin_button_size"
-                android:layout_marginTop="@dimen/pin_button_top_margin"
-                android:fontFamily="@font/maax"
-                android:text="@string/pin_back"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_pin" />
-
-        </GridLayout>
+        <include layout="@layout/layout_pin_buttons" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btnContinue"
