--- a/app/src/main/res/layout/activity_save_pin.xml
+++ b/app/src/main/res/layout/activity_save_pin.xml
@@ -1,5 +1,4 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,207 +6,80 @@
     android:orientation="vertical"
     tools:context="com.tangem.presentation.activity.SavePINActivity">
 
-    <LinearLayout
-        android:id="@+id/login_form"
+    <TextView
+        android:id="@+id/pin"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="numberPassword"
+        android:paddingBottom="8dp"
+        android:singleLine="false"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        tools:ignore="TextViewEdits" />
 
-        <TextView
-            android:id="@+id/pin"
+    <TextView
+        android:id="@+id/pin_prompt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:fontFamily="@font/maax"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:text="@string/enter_pin_and_use_fingerprint_to_save_it"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/layout_pin_buttons" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="numberPassword"
-            android:paddingBottom="8dp"
-            android:singleLine="false"
-            android:textAlignment="center"
-            android:textSize="36sp"
-            tools:ignore="TextViewEdits"/>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="bottom"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/pin_prompt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:fontFamily="@font/maax"
-            android:paddingBottom="16dp"
-            android:paddingTop="16dp"
-            android:text="@string/enter_pin_and_use_fingerprint_to_save_it"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <GridLayout
+            <CheckBox
+                android:id="@+id/chkUseFingerprint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:columnCount="3"
-                android:rowCount="4">
-
-                <Button
-                    android:id="@+id/btn1"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="1"
-                    android:textSize="32dp"/>
-
-                <Button
-                    android:id="@+id/btn2"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="2"
-                    android:textSize="32dp"/>
-
-                <Button
-                    android:id="@+id/btn3"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="3"
-                    android:textSize="32dp"/>
-
-                <Button
-                    android:id="@+id/btn4"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="4"
-                    android:textSize="32dp"/>
-
-                <Button
-                    android:id="@+id/btn5"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="5"
-                    android:textSize="32dp"/>
-
-                <Button
-                    android:id="@+id/btn6"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="6"
-                    android:textSize="32dp"/>
-
-                <Button
-                    android:id="@+id/btn7"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="7"
-                    android:textSize="32dp"/>
-
-                <Button
-                    android:id="@+id/btn8"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="8"
-                    android:textSize="32dp"/>
-
-                <Button
-                    android:id="@+id/btn9"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="9"
-                    android:textSize="32dp"/>
-
-                <Space/>
-
-                <Button
-                    android:id="@+id/btn0"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="0"
-                    android:textSize="32dp"/>
-
-                <Button
-                    android:id="@+id/btnBackspace"
-                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                    android:layout_width="@dimen/pin_button_size"
-                    android:layout_height="@dimen/pin_button_size"
-                    android:layout_marginTop="@dimen/pin_button_top_margin"
-                    android:fontFamily="@font/maax"
-                    android:text="&lt;"
-                    android:textSize="32dp"/>
-
-            </GridLayout>
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="4dp"
+                android:drawableEnd="@mipmap/ic_fp"
+                android:drawablePadding="8dp"
+                android:text="@string/protect_with_fingerprint" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:layout_gravity="bottom"
-                android:orientation="vertical">
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
 
-                <CheckBox
-                    android:id="@+id/chkUseFingerprint"
+                <Button
+                    android:id="@+id/btnSavePIN"
+                    style="@style/AppTheme.RoundedCornerMaterialButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="4dp"
-                    android:drawableEnd="@mipmap/ic_fp"
-                    android:drawablePadding="8dp"
-                    android:text="@string/protect_with_fingerprint"/>
+                    android:layout_weight="1"
+                    android:text="@string/save"
+                    android:textColor="@color/white" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btnSavePIN"
-                        style="@style/AppTheme.RoundedCornerMaterialButton"
-                        android:layout_width="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/save"
-                        android:textColor="@color/white"/>
-
-                    <Button
-                        android:id="@+id/btnDeletePIN"
-                        style="@style/AppTheme.RoundedCornerMaterialButton"
-                        android:layout_width="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/delete"
-                        android:textColor="@color/white"/>
-
-                </LinearLayout>
+                <Button
+                    android:id="@+id/btnDeletePIN"
+                    style="@style/AppTheme.RoundedCornerMaterialButton"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/delete"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
-        </RelativeLayout>
+        </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
