--- a/app/src/main/res/layout/dialog_fingerprint_confirmation.xml
+++ b/app/src/main/res/layout/dialog_fingerprint_confirmation.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +10,7 @@
         android:layout_height="96dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        android:src="@mipmap/ic_fp"/>
+        android:src="@mipmap/ic_fp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,7 +19,7 @@
         android:layout_margin="16dp"
         android:text="@string/touch_fingerprint_scanner_to_confirm"
         android:textAlignment="center"
-        android:textSize="@dimen/text_size_medium"/>
+        android:textSize="@dimen/text_size_medium" />
 
     <ProgressBar
         android:id="@+id/login_progress"
@@ -29,6 +27,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </LinearLayout>
