--- a/app/src/main/res/layout/fr_loaded_wallet.xml
+++ b/app/src/main/res/layout/fr_loaded_wallet.xml
@@ -115,6 +115,7 @@
                     <TextView
                         android:id="@+id/tvBlockchain"
                         android:layout_width="0dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:fontFamily="@font/maax"
